# migraine_weather

./: .gitignore  Makefile  README.md  environment.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: mkdocs.yml
docs/docs/: index.md
migraine_weather/: __init__.py  calculate_variation.py  clean_data.py  config.py  consts.py  custom_funcs.py  data_acquisition.py  dataset.py  features.py  make_dataset.py  make_maps.py  plot_country.py  plots.py  processing.py  test_config.py  test_custom_funcs.py  utils.py
migraine_weather/modeling/: predict.py  train.py
migraine_weather/test/: test_make_dataset.py  test_processing.py
migraine_weather/visualisation/: make_maps.py
notebooks/: 01_initial_data_check.ipynb  02_outlier_check.ipynb  03_calculating_pres_variation_single_station.ipynb  04_creating_map_of_pressure_variation.ipynb
test/: conftest.py  test_data_acquisition.py  test_make_dataset.py  test_processing.py  test_utils.py
tests/: conftest.py  test_data_acquisition.py  test_make_dataset.py  test_processing.py  test_utils.py
