[project]
name = "migraine_weather"
version = "0.0.1"
description = "Analysis of weather data for migraine risk"
authors = [
  { name = "Payton E. Rodman" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.12,<3.13"
dependencies = [
  "cartopy>=0.25.0",
  "datetime>=5.5",
  "logging~=0.4.9.6",
  "matplotlib>=3.10.6",
  "meteostat~=1.7.4",
  "numpy~=1.26",
  "pandas~=2.1.0",
  "pycountry~=24.6.1",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["migraine_weather"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
